--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,40 @@
 language: ruby
+
 sudo: false
-script: "bundle exec rake"
+
+before_script:
+  - bundle exec rake db:create
+
+script: 'bundle exec rake'
+
 gemfile:
-  - Gemfile
-  - gemfiles/Gemfile.rails5
+  - gemfiles/Gemfile.rails-4.2.rb
+  - gemfiles/Gemfile.rails-5.0.rb
+
 rvm:
   - 2.3.1
   - 2.2.5
   - 2.1
   - 2.0.0
   - rbx
+  - rbx-2
+  - jruby-9.1.2.0
+
+env:
+  - DB=postgres
+  - DB=mysql
+
 matrix:
+  allow_failures:
+  - rvm: jruby-9.1.2.0
+  - rvm: rbx-2
+  - gemfile: gemfiles/Gemfile.rails-5.0.rb
+
   exclude:
     - rvm: 2.1
-      gemfile: gemfiles/Gemfile.rails5
+      gemfile: gemfiles/Gemfile.rails-5.0.rb
     - rvm: 2.0.0
-      gemfile: gemfiles/Gemfile.rails5
+      gemfile: gemfiles/Gemfile.rails-5.0.rb
 
 notifications:
   webhooks:
