--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: ruby
 cache: bundler
-sudo: false
+sudo: required
+dist: trusty
 before_install: gem install bundler
 before_script: bundle exec rake db:create db:migrate
 script: bundle exec rake
