Add mysql-5.6 to add-ons

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ cache: bundler
 sudo: required
 dist: trusty
 before_install: gem install bundler
+addons:
+  apt:
+    packages:
+    - mysql-server-5.6
+    - mysql-client-core-5.6
+    - mysql-client-5.6
 before_script: bundle exec rake db:create db:migrate
 script: bundle exec rake
 
