Remove jobs from bundle install
Ref: https://github.com/travis-ci/travis-ci/issues/2821

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ dist: trusty
 before_install:
   - gem install bundler
   - mysql -u root -e 'create database globalize_test character set utf8;' >/dev/null
+install:
+  - bundle install --retry=3
 addons:
   apt:
     packages:
