--- a/test/support/database.yml
+++ b/test/support/database.yml
@@ -1,16 +1,17 @@
 mysql:
   adapter: mysql2
+  host: localhost
+  port: 3306
   database: globalize_test
   username: root
-  hostname: localhost
   encoding: utf8
 
 postgres:
   adapter: postgresql
   host: localhost
   port: 5432
-  username: postgres
   database: globalize_test
+  username: postgres
   encoding: utf8
 
 sqlite3:
