--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,15 @@ gemfile:
   - gemfiles/Gemfile.rails-4.2.rb
 
 rvm:
-  - 2.4.2
-  - 2.3.5
-  - 2.2.8
+  - 2.4.3
+  - 2.3.6
+  - 2.2.9
   - 2.1
   - 2.0.0
   - rbx
   - jruby-9.1.2.0
+  - 2.5.0
+  - ruby-head
 
 env:
   - DB=sqlite3
@@ -36,6 +38,7 @@ matrix:
       gemfile: Gemfile
     - rvm: jruby-9.1.2.0
       gemfile: gemfiles/Gemfile.activemodel-serializers-xml.rb
+    - rvm: ruby-head
 
   exclude:
     - rvm: 2.1
