Add Appraisal to easily run tests against various versions of Rails

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,19 +6,15 @@ before_script: bundle exec rake db:create db:migrate
 script: bundle exec rake
 
 gemfile:
-  - Gemfile
-  - gemfiles/Gemfile.activemodel-serializers-xml.rb
-  - gemfiles/Gemfile.rails-4.2.rb
-  - gemfiles/Gemfile.rails-5.2.rb
+  - gemfiles/rails_4.2.10.gemfile
+  - gemfiles/rails_5.1.6.gemfile
+  - gemfiles/rails_5.2.0.gemfile
 
 rvm:
-  - rbx
-  - jruby-9.1.2.0
   - 2.2.10
   - 2.3.7
   - 2.4.4
   - 2.5.1
-  - ruby-head
 
 env:
   - DB=sqlite3
