--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,23 @@ sudo: false
 before_install: gem install bundler
 before_script: bundle exec rake db:create db:migrate
 
+services:
+  - mysql
+  - postgresql
+
+branches:
+  only:
+  - master
+
 gemfile:
   - gemfiles/rails_4.2.10.gemfile
   - gemfiles/rails_5.1.6.gemfile
   - gemfiles/rails_5.2.1.gemfile
 
 rvm:
-  - 2.6.3
-  - 2.5.5
-  - 2.4.6
+  - 2.6.5
+  - 2.5.7
+  - 2.4.9
 
 env:
   - DB=sqlite3
