Try GitHub Actions CI

--- a/test/support/database.yml
+++ b/test/support/database.yml
@@ -4,9 +4,10 @@ mysql:
   port: 3306
   database: globalize_test
   username: root
+  password: <%= ENV['MYSQL_PASSWORD'] %>
   encoding: utf8
 
-postgres:
+postgresql:
   adapter: postgresql
   host: localhost
   port: 5432
