--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
         database: [ mysql, postgresql, sqlite3 ]
         gemfile: [ '5.2.1', '5.1.6', '4.2.10' ]
         ruby: [ '2.6.x', '2.5.x', '2.4.x' ]
-      fail-fast: false
+      fail-fast: true
     runs-on: ubuntu-latest
     name: ${{ matrix.ruby }} ${{ matrix.database }} rails-${{ matrix.gemfile }}
     steps:
