--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,8 +10,19 @@ jobs:
     strategy:
       matrix:
         database: [ mysql, postgresql, sqlite3 ]
-        gemfile: [ '5.2.1', '5.1.6', '4.2.10' ]
-        ruby: [ '2.6', '2.5', '2.4' ]
+        gemfile: [ '6.1.0', '6.0.3.4', '5.2.4.4', '5.1.7', '4.2.11.3' ]
+        ruby: [ '2.7', '2.6', '2.5', '2.4' ]
+        exclude:
+          - ruby: '2.7'
+            gemfile: '5.2.4.4'
+          - ruby: '2.7'
+            gemfile: '5.1.7'
+          - ruby: '2.7'
+            gemfile: '4.2.11.3'
+          - ruby: '2.4'
+            gemfile: '6.1.0'
+          - ruby: '2.4'
+            gemfile: '6.0.3.4'
       fail-fast: false
     runs-on: ubuntu-latest
     name: ${{ matrix.ruby }} ${{ matrix.database }} rails-${{ matrix.gemfile }}
@@ -32,7 +43,7 @@ jobs:
     - run: bundle exec rake test
 
     env:
-      BUNDLE_GEMFILE: gemfiles/Gemfile.rails-${{ matrix.gemfile }}.rb
+      BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.gemfile }}.gemfile
       BUNDLE_JOBS: 4
       BUNDLE_PATH: vendor/bundle
       CI: true
