--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,14 @@ jobs:
       matrix:
         database: [ mysql, postgresql, sqlite3 ]
         gemfile: [ '6.1.3.1', '6.0.3.6', '5.2.5', '5.1.7', '4.2.11.3' ]
-        ruby: [ '2.7', '2.6', '2.5', '2.4' ]
+        ruby: [ '3.0', '2.7', '2.6', '2.5', '2.4' ]
         exclude:
+          - ruby: '3.0'
+            gemfile: '5.2.5'
+          - ruby: '3.0'
+            gemfile: '5.1.7'
+          - ruby: '3.0'
+            gemfile: '4.2.11.3'
           - ruby: '2.7'
             gemfile: '5.2.5'
           - ruby: '2.7'
