exclude rails 7 from unsuported ruby versions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,10 @@ jobs:
             gemfile: '5.1.7'
           - ruby: '2.7'
             gemfile: '4.2.11.3'
+          - ruby: '2.6'
+            gemfile: '7.0.0'
+          - ruby: '2.5'
+            gemfile: '7.0.0'
           - ruby: '2.4'
             gemfile: '7.0.0'
           - ruby: '2.4'
