--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         database: [ mysql, postgresql, sqlite3 ]
-        gemfile: [ '6.1.3.1', '6.0.3.6', '5.2.5', '5.1.7', '4.2.11.3' ]
+        gemfile: [ '7.0.0', '6.1.3.1', '6.0.3.6', '5.2.5', '5.1.7', '4.2.11.3' ]
         ruby: [ '3.0', '2.7', '2.6', '2.5', '2.4' ]
         exclude:
           - ruby: '3.0'
@@ -25,6 +25,12 @@ jobs:
             gemfile: '5.1.7'
           - ruby: '2.7'
             gemfile: '4.2.11.3'
+          - ruby: '2.6'
+            gemfile: '7.0.0'
+          - ruby: '2.5'
+            gemfile: '7.0.0'
+          - ruby: '2.4'
+            gemfile: '7.0.0'
           - ruby: '2.4'
             gemfile: '6.1.3.1'
           - ruby: '2.4'
@@ -37,8 +43,6 @@ jobs:
     - run: sudo apt-get update
     - run: sudo apt-get install libpq-dev postgresql-client -y
       if: matrix.database == 'postgresql'
-    - run: sudo apt-get install libmysqlclient-dev mysql-client -y
-      if: matrix.database == 'mysql'
     - run: sudo apt-get install libsqlite3-dev -y
       if: matrix.database == 'sqlite3'
     - uses: ruby/setup-ruby@v1
