Update postgresql database environment variables to match with documentation
https://www.postgresql.org/docs/current/libpq-envars.html

--- a/test/support/database.yml
+++ b/test/support/database.yml
@@ -9,11 +9,11 @@ mysql:
 
 postgresql:
   adapter: postgresql
-  host: <%= ENV.fetch('POSTGRESQL_HOST', 'localhost') %>
-  port: <%= ENV.fetch('POSTGRESQL_PORT', 5432) %>
+  host: <%= ENV.fetch("PGHOST", "localhost") %>
+  port: <%= ENV.fetch("PGPORT", 5432) %>
   database: globalize_test
   username: postgres
-  password: <%= ENV['POSTGRESQL_PASSWORD'] %>
+  password: <%= ENV.fetch("PGPASSWORD", "") %>
   encoding: utf8
 
 sqlite3:
