--- a/test/support/database.yml
+++ b/test/support/database.yml
@@ -1,18 +1,19 @@
 mysql:
   adapter: mysql2
-  host: 0.0.0.0
-  port: 3306
+  host: <%= ENV.fetch("MYSQL_HOST", "0.0.0.0") %>
+  port: <%= ENV.fetch("MYSQL_PORT", 3306) %>
   database: globalize_test
   username: root
-  password: <%= ENV['MYSQL_PASSWORD'] %>
+  password: <%= ENV.fetch("MYSQL_PASSWORD", "") %>
   encoding: utf8
 
 postgresql:
   adapter: postgresql
-  host: localhost
-  port: 5432
+  host: <%= ENV.fetch("PGHOST", "localhost") %>
+  port: <%= ENV.fetch("PGPORT", 5432) %>
   database: globalize_test
   username: postgres
+  password: <%= ENV.fetch("PGPASSWORD", "") %>
   encoding: utf8
 
 sqlite3:
