--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,9 +10,19 @@ jobs:
     strategy:
       matrix:
         database: [ mysql, postgresql, sqlite3 ]
-        gemfile: [ '7.0.1', '6.1.3.1', '6.0.3.6', '5.2.5', '5.1.7', '4.2.11.3' ]
-        ruby: [ '3.1', '3.0', '2.7', '2.6', '2.5', '2.4' ]
+        gemfile: [ '7.1.0', '7.0.1', '6.1.3.1', '6.0.3.6', '5.2.5', '5.1.7', '4.2.11.3' ]
+        ruby: [ '3.2', '3.1', '3.0', '2.7', '2.6', '2.5', '2.4' ]
         exclude:
+          - ruby: '3.2'
+            gemfile: '6.1.3.1'
+          - ruby: '3.2'
+            gemfile: '6.0.3.6'
+          - ruby: '3.2'
+            gemfile: '5.2.5'
+          - ruby: '3.2'
+            gemfile: '5.1.7'
+          - ruby: '3.2'
+            gemfile: '4.2.11.3'
           - ruby: '3.1'
             gemfile: '6.0.3.6'
           - ruby: '3.1'
@@ -34,9 +44,15 @@ jobs:
           - ruby: '2.7'
             gemfile: '4.2.11.3'
           - ruby: '2.6'
+            gemfile: '7.1.0'
+          - ruby: '2.6'
             gemfile: '7.0.1'
           - ruby: '2.5'
+            gemfile: '7.1.0'
+          - ruby: '2.5'
             gemfile: '7.0.1'
+          - ruby: '2.4'
+            gemfile: '7.1.0'
           - ruby: '2.4'
             gemfile: '7.0.1'
           - ruby: '2.4'
