--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,20 +11,7 @@ jobs:
       matrix:
         database: [ mysql, postgresql, sqlite3 ]
         gemfile: [ '7.1.0', '7.0.1' ]
-        ruby: [ '3.2', '3.1', '3.0', '2.7', '2.6', '2.5', '2.4' ]
-        exclude:
-          - ruby: '2.6'
-            gemfile: '7.1.0'
-          - ruby: '2.6'
-            gemfile: '7.0.1'
-          - ruby: '2.5'
-            gemfile: '7.1.0'
-          - ruby: '2.5'
-            gemfile: '7.0.1'
-          - ruby: '2.4'
-            gemfile: '7.1.0'
-          - ruby: '2.4'
-            gemfile: '7.0.1'
+        ruby: [ '3.2', '3.1', '3.0' ]
       fail-fast: false
     runs-on: ubuntu-latest
     name: ${{ matrix.ruby }} ${{ matrix.database }} rails-${{ matrix.gemfile }}
