--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         database: [ mysql, postgresql, sqlite3 ]
-        gemfile: [ '7.1.0', '7.0.1' ]
+        gemfile: [ '7.2.0', '7.1.0', '7.0.1' ]
         ruby: [ '3.2', '3.1', '3.0' ]
       fail-fast: false
     runs-on: ubuntu-latest
