--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,9 @@ jobs:
         database: [ mysql, postgresql, sqlite3 ]
         gemfile: [ '7.2.0', '7.1.0', '7.0.1' ]
         ruby: [ '3.2', '3.1', '3.0' ]
+        exclude:
+          - ruby: '3.0'
+            gemfile: '7.2.0'
       fail-fast: false
     runs-on: ubuntu-latest
     name: ${{ matrix.ruby }} ${{ matrix.database }} rails-${{ matrix.gemfile }}
